Changes for pull: including SafeMode and Settings

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,16 +7,61 @@
     android:orientation= "vertical"
     tools:context="com.training.android.undivided.Settings">
 
-    <Switch
-        android:id="@+id/swAutoStart"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:checked="false"
-        android:padding="5dp"
-        android:text="Auto Start"
-        android:textAlignment="textStart"
-        android:textSize="24sp"
-        tools:checked="false" />
+        android:layout_height="match_parent">
+
+        <Switch
+            android:id="@+id/swAutoStart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:checked="false"
+            android:padding="5dp"
+            android:text="Auto Start"
+            android:textAlignment="textStart"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:checked="false" />
+
+<!--        <EditText
+            android:id="@+id/etThreshold"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvThreshold" />-->
+
+        <TextView
+            android:id="@+id/tvThreshold"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:padding="5dp"
+            android:text="Call Threshold"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toStartOf="@+id/spinner"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/swAutoStart" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="80dp"
+            android:spinnerMode="dropdown"
+            android:layout_height="35dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/swAutoStart" />
+    </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
