--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#005826</color>
     <color name="colorAccent">#197B30</color>
     <color name="red">#C82506</color>
+    <color name="dark_red">#ba2306</color>
     <color name="dark_blue">#36474F</color>
     <color name="blue">#33B5E5</color>
     <color name="dark_green">#669900</color>
