--- a/app/src/main/res/layout/fragment_message_detail.xml
+++ b/app/src/main/res/layout/fragment_message_detail.xml
@@ -3,6 +3,7 @@
     android:id="@+id/nested_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/AppTheme.NoActionBar"
     tools:context="com.training.android.undivided.GroupSender.Module.Message_Detail.MessageDetailFragment">
     <LinearLayout
         android:layout_width="match_parent"
