--- a/app/src/main/res/layout/fragment_search_message.xml
+++ b/app/src/main/res/layout/fragment_search_message.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/AppTheme.NoActionBar"
     android:orientation="vertical"
     tools:context="com.training.android.undivided.GroupSender.Module.Search_Message.SearchMessageFragment">
     <android.support.design.widget.AppBarLayout
