--- a/app/src/main/res/layout/activity_edit_message.xml
+++ b/app/src/main/res/layout/activity_edit_message.xml
@@ -4,6 +4,7 @@
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
+    android:theme="@style/AppTheme.NoActionBar"
     android:layout_height="match_parent"
     tools:context="com.training.android.undivided.GroupSender.Module.Edit_Message.EditMessageActivity">
 
