--- a/app/src/main/res/layout/activity_search_message.xml
+++ b/app/src/main/res/layout/activity_search_message.xml
@@ -5,6 +5,7 @@
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/AppTheme.NoActionBar"
     tools:context="com.training.android.undivided.GroupSender.Module.Search_Message.SearchMessageActivity">
 
 </FrameLayout>
