--- a/app/src/main/res/layout/fragment_contact2.xml
+++ b/app/src/main/res/layout/fragment_contact2.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:theme="@style/AppTheme.NoActionBar"
     tools:context="com.training.android.undivided.GroupSender.Module.Contacts.ContactFragment">
 
 
