--- a/app/src/main/res/layout/fragment_contact_phone.xml
+++ b/app/src/main/res/layout/fragment_contact_phone.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
+    android:theme="@style/AppTheme.NoActionBar"
     android:layout_height="match_parent">
 
 
