--- a/app/src/main/res/layout/fragment_group_contact.xml
+++ b/app/src/main/res/layout/fragment_group_contact.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:theme="@style/AppTheme.NoActionBar"
     tools:context="com.training.android.undivided.GroupSender.Module.Contacts.GroupContactFragment">
 
     <TextView
