--- a/app/src/main/res/layout/item_contact_history.xml
+++ b/app/src/main/res/layout/item_contact_history.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="5dp"
+    android:theme="@style/AppTheme.NoActionBar"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="@color/cardview_light_background"
     app:cardCornerRadius="6dp"
