--- a/app/src/main/res/layout/item_contact_send.xml
+++ b/app/src/main/res/layout/item_contact_send.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="5dp"
+    android:theme="@style/AppTheme.NoActionBar"
     android:layout_marginBottom="5dp"
     android:layout_height="wrap_content">
 
