--- a/app/src/main/res/layout/item_phone_number.xml
+++ b/app/src/main/res/layout/item_phone_number.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
+    android:theme="@style/AppTheme.NoActionBar"
     android:orientation="vertical">
 
     <ImageView
