--- a/app/src/main/res/layout/layout_empty.xml
+++ b/app/src/main/res/layout/layout_empty.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/empty_view"
     android:layout_width="match_parent"
+    android:theme="@style/AppTheme.NoActionBar"
     android:layout_height="match_parent"
     android:visibility="gone"
     android:gravity="center"
