--- a/app/src/main/res/layout/layout_send_again.xml
+++ b/app/src/main/res/layout/layout_send_again.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:theme="@style/AppTheme.NoActionBar"
     android:paddingTop="20dp"
     android:paddingStart="40dp"
     android:orientation="vertical"
