--- a/app/src/main/res/layout/layout_text_input.xml
+++ b/app/src/main/res/layout/layout_text_input.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:padding="@dimen/content_margin"
     android:layout_height="match_parent"
+    android:theme="@style/AppTheme.NoActionBar"
     android:orientation="vertical">
 
     <EditText
