--- a/app/src/main/res/layout/activity_auto_reply_settings.xml
+++ b/app/src/main/res/layout/activity_auto_reply_settings.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:stretchColumns="0"
+    android:padding="5dp"
     tools:context="com.training.android.undivided.AutoReply.AutoReplySettings">
 
-</android.support.constraint.ConstraintLayout>
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:padding="5dp" >
+
+        <TextView
+            android:id="@+id/settings_text_mute"
+            android:layout_column="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/settings_mute_text" />
+
+        <Spinner
+            android:id="@+id/settings_spinner_mute"
+            android:layout_column="1"
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </TableRow>
+
+</TableLayout>
