--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="transparent">#80000000</color>
     <color name="colorPrimary">#197b30</color>
     <color name="colorPrimaryDark">#005826</color>
     <color name="colorAccent">#197B30</color>
