--- a/app/src/main/res/layout/activity_safe_mode.xml
+++ b/app/src/main/res/layout/activity_safe_mode.xml
@@ -7,14 +7,14 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:fitsSystemWindows="true"
-    tools:context=".SafeMode">
+    tools:context=".SafeMode.SafeMode">
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.training.android.undivided.SafeMode">
+    tools:context="com.training.android.undivided.SafeMode.SafeMode">
 
     <ImageView
         android:id="@+id/ivDriveStop"
