--- a/app/src/main/res/layout/log_row.xml
+++ b/app/src/main/res/layout/log_row.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/imageView9"
+        app:layout_constraintStart_toEndOf="@+id/ivCallType"
         app:layout_constraintTop_toBottomOf="@+id/tvName"
         tools:textColor="@color/authui_inputTextColorDark" />
 
@@ -24,7 +24,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/imageView9"
+        app:layout_constraintStart_toEndOf="@+id/ivCallType"
         app:layout_constraintTop_toBottomOf="@+id/tvNum"
         tools:textColor="@color/authui_inputTextColorDark" />
 
@@ -59,12 +59,12 @@
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView9"
+        app:layout_constraintStart_toEndOf="@+id/ivCallType"
         app:layout_constraintTop_toTopOf="parent"
         tools:textColor="@color/authui_inputTextColorDark" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/ivCallType"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
