--- a/app/src/main/res/layout/bubble_layout.xml
+++ b/app/src/main/res/layout/bubble_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.txusballesteros.bubbles.BubbleLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="50dp"
+    android:layout_height="50dp"
     android:clipChildren="false"
     android:clipToPadding="false">
 
