--- a/app/src/main/res/layout/activity_add_group.xml
+++ b/app/src/main/res/layout/activity_add_group.xml
@@ -300,31 +300,11 @@
                         android:id="@+id/readsms"
                         android:layout_width="wrap_content"
                         android:layout_height="29dp"
-                        android:layout_marginEnd="8dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
-                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:padding="5dp"
-                        android:text="Read Recieved SMS"
-                        android:textSize="16sp"
-                        app:buttonTint="@color/colorPrimaryDark"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/replysms" />
-
-                    <CheckBox
-                        android:id="@+id/replysms"
-                        android:layout_width="wrap_content"
-                        android:layout_height="29dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
-                        android:padding="5dp"
-                        android:text="Reply to Recieved SMS"
+                        android:text="Read and Reply to Recieved SMS"
                         android:textSize="16sp"
                         app:buttonTint="@color/colorPrimaryDark"
                         app:layout_constraintHorizontal_bias="0.0"
