--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation= "vertical"
+    android:orientation="vertical"
     tools:context="com.training.android.undivided.Settings">
 
     <android.support.constraint.ConstraintLayout
@@ -20,7 +20,6 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:checked="false"
-            android:padding="5dp"
             android:text="Auto Start"
             android:textAlignment="textStart"
             android:textSize="24sp"
@@ -29,25 +28,15 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:checked="false" />
 
-<!--        <EditText
-            android:id="@+id/etThreshold"
-            android:layout_width="match_parent"
-            android:layout_height="47dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:inputType="number"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvThreshold" />-->
-
         <TextView
             android:id="@+id/tvThreshold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:padding="5dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="Call Threshold"
+            android:textColor="@color/black"
             android:textSize="25sp"
             app:layout_constraintEnd_toStartOf="@+id/spinner"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,12 +45,93 @@
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="80dp"
-            android:spinnerMode="dropdown"
             android:layout_height="35dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
+            android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/swAutoStart" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="Emergency Contact"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvThreshold" />
+
+        <EditText
+            android:id="@+id/etEmergencyContact"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:hint="Phone Number"
+            android:inputType="phone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="Reply Message for unknown numbers"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etEmergencyContact" />
+
+        <LinearLayout
+            android:id="@+id/GDescLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/edit_text_round_corner"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView10">
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_gDesc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/etReplyMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@null"
+                    android:ems="10"
+                    android:gravity="top"
+                    android:hint="Message"
+                    android:inputType="text"
+                    android:maxLines="3"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/etGroupName"
+                    app:layout_constraintVertical_bias="0.0" />
+
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+
     </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
