--- a/app/src/main/res/menu/fam_menu.xml
+++ b/app/src/main/res/menu/fam_menu.xml
@@ -19,7 +19,7 @@
 
     <item
         android:id="@+id/mCall"
-        android:icon="@drawable/call"
-        android:title="Emergency Contacts"/>
+        android:icon="@drawable/ic_navigation_def"
+        android:title="Go To Google Navigation"/>
 
 </menu>
